--- a/package.json
+++ b/package.json
@@ -10,7 +10,7 @@
     "@fortawesome/react-fontawesome": "^0.2.0",
     "@material-tailwind/react": "^2.1.4",
     "@material-ui/core": "^4.12.4",
-    "@mui/material": "^5.14.17",
+    "@mui/material": "^5.15.1",
     "@react-icons/all-files": "^4.1.0",
     "@reduxjs/toolkit": "^1.9.7",
     "@testing-library/jest-dom": "^5.17.0",
@@ -18,7 +18,9 @@
     "@testing-library/user-event": "^13.5.0",
     "firebase": "^10.5.2",
     "flowbite-datepicker": "^1.2.4",
+    "install": "^0.13.0",
     "moment": "^2.29.4",
+    "npm": "^10.2.5",
     "react": "^18.2.0",
     "react-dom": "^18.2.0",
     "react-icons": "^4.12.0",
